[gd_scene load_steps=11 format=2]

[ext_resource path="res://hud/imgs/audio_on.png" type="Texture" id=1]
[ext_resource path="res://hud/imgs/audio_off.png" type="Texture" id=2]
[ext_resource path="res://hud/imgs/music_on.png" type="Texture" id=3]
[ext_resource path="res://hud/imgs/lives.png" type="Texture" id=4]
[ext_resource path="res://hud/imgs/music_off.png" type="Texture" id=5]
[ext_resource path="res://hud/imgs/reset.png" type="Texture" id=6]
[ext_resource path="res://main_menu/PressStart2P-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://hud/HUD.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0784314, 0.176471, 0.258824, 1 )
border_width_top = 2
border_color = Color( 0.992157, 0.996078, 0.819608, 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 10
size_flags_vertical = 2
script = ExtResource( 8 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_bottom = 38.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Buttons" type="HBoxContainer" parent="PanelContainer"]
margin_top = 2.0
margin_right = 72.0
margin_bottom = 38.0
size_flags_horizontal = 2
custom_constants/separation = 0

[node name="Game" type="HBoxContainer" parent="PanelContainer/Buttons"]
visible = false
margin_right = 128.0
margin_bottom = 36.0
custom_constants/separation = 8

[node name="Lives" type="HBoxContainer" parent="PanelContainer/Buttons/Game"]
margin_right = 72.0
margin_bottom = 36.0
custom_constants/separation = 4

[node name="Icon" type="TextureRect" parent="PanelContainer/Buttons/Game/Lives"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="PanelContainer/Buttons/Game/Lives"]
margin_left = 40.0
margin_top = 10.0
margin_right = 72.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "x3"

[node name="Reset" type="TextureButton" parent="PanelContainer/Buttons/Game"]
margin_left = 80.0
margin_right = 116.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="PanelContainer/Buttons/Game"]
margin_left = 124.0
margin_right = 128.0
margin_bottom = 36.0

[node name="Music" type="TextureButton" parent="PanelContainer/Buttons"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
pressed = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Audio" type="TextureButton" parent="PanelContainer/Buttons"]
margin_left = 36.0
margin_right = 72.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
pressed = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="PanelContainer/Buttons/Game/Reset" to="." method="_on_Reset_pressed"]
[connection signal="toggled" from="PanelContainer/Buttons/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="PanelContainer/Buttons/Audio" to="." method="_on_Audio_toggled"]
